kernel/tests/invalid_data_declarations/constructor_parameter_level_too_high_2.ck
data Invalid.{u} : Type where
  | c : Sort u -> Invalid
